# vTCM

./: CMakeLists.txt  LICENSE  README.md
demos/: config.txt  demo.cpp  hex.py  port.cpp  sm3_hash.txt  usb  usb.cpp  vTCM
demos/normal/: file  normal.txt
demos/secure/: secure.txt
include/: EscapeCode.h  sm3.h  sm4.h  usb.h
src/: EscapeCode.cpp  main.cpp  sm3.cpp  sm4.cpp  usb.cpp
